--- a/package.json
+++ b/package.json
@@ -13,12 +13,23 @@
     "@babel/preset-env": "^7.24.0",
     "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
+    "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.9.0",
+    "gh-pages": "^6.1.1",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "pubsub-js": "^1.9.4"
   }
 }
