--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettier": "3.2.5",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
