--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "deploy": "npx gh-pages -d dist -m deploy"
   },
   "author": "",
   "license": "ISC",
