--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "prettier": "3.2.5",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
